3.4: mongos segfault in getMore on view with find batchSize of 0

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.4.5
    • Affects Version/s: 3.4.4
    • Component/s: None
    • Major Change
    • ALL
    • Query 2017-05-08
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Affects MongoDB 3.4 only. Not reproducible on MongoDB 3.5 versions past 3.5.3, likely due to work done for SERVER-27286 / SERVER-27937.

       src/mongo/util/stacktrace_posix.cpp:172:0: mongo::printStackTrace(std::ostream&)
       src/mongo/util/signal_handlers_synchronous.cpp:178:0: mongo::(anonymous namespace)::printSignalAndBacktrace(int)
       src/mongo/util/signal_handlers_synchronous.cpp:274:0: mongo::(anonymous namespace)::abruptQuitWithAddrSignal(int, siginfo_t*, void*)
       ??:0:0: ??
       src/mongo/base/string_data.h:268:0: mongo::StringData::copyTo(char*, bool) const
       src/mongo/bson/util/builder.h:263:0: mongo::_BufBuilder<mongo::SharedBufferAllocator>::appendStr(mongo::StringData, bool)
       src/mongo/bson/bsonobjbuilder.h:164:0: mongo::BSONObjBuilder::append(mongo::StringData, mongo::BSONObj)
       src/mongo/bson/bsonobjbuilder.h:779:0: mongo::BSONArrayBuilder& mongo::BSONArrayBuilder::append<mongo::BSONObj>(mongo::BSONObj const&)
       src/mongo/db/query/cursor_response.cpp:190:0: mongo::CursorResponse::addToBSON(mongo::CursorResponse::ResponseType, mongo::BSONObjBuilder*) const
       src/mongo/s/commands/cluster_getmore_cmd.cpp:114:0: mongo::(anonymous namespace)::ClusterGetMoreCmd::run(mongo::OperationContext*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, mongo::BSONObj&, int, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, mongo::BSONObjBuilder&)
       src/mongo/s/s_only.cpp:147:0: mongo::Command::execCommandClient(mongo::OperationContext*, mongo::Command*, int, char const*, mongo::BSONObj&, mongo::BSONObjBuilder&)
       src/mongo/s/commands/strategy.cpp:102:0: mongo::(anonymous namespace)::runAgainstRegistered(mongo::OperationContext*, char const*, mongo::BSONObj&, mongo::BSONObjBuilder&, int) [clone .constprop.249]
       src/mongo/s/commands/strategy.cpp:312:0: mongo::Strategy::clientCommandOp(mongo::OperationContext*, mongo::NamespaceString const&, mongo::DbMessage*)
       src/mongo/s/service_entry_point_mongos.cpp:146:0: mongo::ServiceEntryPointMongos::_sessionLoop(std::shared_ptr<mongo::transport::Session> const&)
       opt/mongodbtoolchain/v2/include/c++/5.4.0/functional:2267:0: std::function<void (std::shared_ptr<mongo::transport::Session> const&)>::operator()(std::shared_ptr<mongo::transport::Session> const&) const
       src/mongo/transport/service_entry_point_utils.cpp:78:0: mongo::(anonymous namespace)::runFunc(void*)
       ??:0:0: start_thread
       build/glibc-9tT8Do/glibc-2.23/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:109:0: clone
      

            Assignee:
            James Wahlin
            Reporter:
            James Wahlin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: