SERVER-29018 Reject mongos getMore on view after batchSize 0 find